# Proxmox-MCP

./: .env.example  .gitignore  CHANGELOG.md  CODEBASE_AUDIT_REPORT.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION_DISCOVERY_REPORT.md  INFRASTRUCTURE_READ_COMPLETION_REPORT.md  LICENSE  PHASE_1A_ACCEPTANCE.md  README.md  T102_IMPLEMENTATION_REPORT.md  T104_IMPLEMENTATION_REPORT.md  TECHNICAL_DEBT_REMEDIATION_REPORT.md  VALIDATION_REMEDIATION_REPORT.md  pyproject.toml
config/: default.yaml
config/schema/: config.schema.json
deploy/: Dockerfile  docker-compose.yml  mcp-client.example.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md  MEMORY_KNOWLEDGE_MODEL.md  README.md
docs/adr/: 0001-implementation-language.md  0002-mcp-transport.md  0005-ai-proxmox-operator-positioning.md  0006-two-level-knowledge-model.md  0007-entityref.md  0008-pve-compatibility-matrix.md  0009-scalability-limits.md  0010-service-type-taxonomy.md  ADR_INDEX.md  template.md
docs/architecture/: ARCHITECTURE.md  REFERENCE_USAGE_POLICY.md
docs/archive/: DOCUMENTATION_RESTRUCTURE_PLAN.md  DOCUMENTATION_RESTRUCTURE_REPORT.md  README.md  README_REFRESH_PLAN.md  README_REFRESH_REPORT.md  REFERENCE_USAGE_AUDIT.md
docs/audit/: DOCUMENTATION_AUDIT.md  DOCUMENTATION_CLEANUP_PLAN.md
docs/implementation/: PHASE_1A_PROGRESS_REPORT.md
scripts/: debug_task_params.py  debug_upid_encoding.py  generate_tool_catalog.py  test_live_connection.py  validate_config.py  validate_live_mcp.py  validate_live_phase1b2.py  validate_live_task.py
src/mcp_proxmox/: __init__.py  (+1 more)
tests/: README.md  test_skeleton.py
(+80 files in other folders)
