[build-system]
requires = ["hatchling>=1.24,<2"]
build-backend = "hatchling.build"

[project]
name = "mcp-proxmox"
version = "0.1.0-alpha.0"
description = "Local AI Infrastructure Operator for Proxmox VE exposed via MCP"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
  { name = "MCP-Proxmox local project" }
]
dependencies = [
  "mcp>=1.0,<2",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "pyyaml>=6.0,<7",
  "structlog>=24.1,<26",
  "anyio>=4.4,<5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "respx>=0.21,<1"
]

[project.scripts]
mcp-proxmox = "mcp_proxmox.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_proxmox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["mcp_proxmox"]
